# pictex

./: .gitignore  CHANGELOG.md  Dockerfile.test  MIGRATION.md  MIGRATION_V2.md  README.md  pyproject.toml
docs/: MIGRATION.md  box_model.md  colors.md  core_concepts.md  exporting.md  getting_started.md  text.md
docs/api/: models.md
docs/internal/: README.md  design-decisions.md
examples/code_to_image/: code_to_image.py
examples/examples_made_by_ai/: certificate_template.py  dashboard_metrics.py  infographic_stats.py  product_showcase.py
examples/github_card/: github_card.py
examples/table/: table.py
examples/tweet_card/: tweet_card.py
src/pictex/: __init__.py  bitmap_image.py  vector_image.py
src/pictex/builders/: canvas.py  column.py  container.py  image.py  row.py  stylable.py  with_position_mixin.py  with_size_mixin.py
src/pictex/layout/: __init__.py  layout_engine.py  layout_result.py  size_resolver.py  style_mapper.py
src/pictex/models/internal/: __init__.py  constraints.py
src/pictex/models/public/: __init__.py  layout.py  node_type.py  position.py  radial_gradient.py  render_tree.py  size.py  style.py  sweep_gradient.py  transform.py  two_point_conical_gradient.py  typography.py
src/pictex/nodes/: __init__.py  column_node.py  container_node.py  image_node.py  node.py  row_node.py  text_node.py
src/pictex/renderer/: image_processor.py  renderer.py  vector_image_processor.py
src/pictex/text/: font_manager.py  text_shaper.py  typeface_loader.py
src/pictex/utils/: __init__.py  font.py
tests/: test_aspect_ratio.py  test_builders_api.py  test_flex_properties.py  test_image.py  test_integration.py  test_layout.py  test_positioning.py  test_size_constraints.py  test_sizing.py  test_svg.py  test_text_wrap.py  test_vector_image.py
